<resources>
    <string name="app_name">My First App</string>

    <string name="tvSaludo">Hola bienvenidos</string>
    <string name="tvUsuario">Usuario:</string>
    <string name="tvPass">Contraseña:</string>
    <string name="tvUserNombreLabel">Nombre:</string>
    <string name="tvUserEmailLabel">Email</string>
    <string name="tvUserEdadLabel">Edad:</string>
    <string name="tvUserEdadComplement">años</string>

    <string name="etUsuarioHint">Ingrese Usuario</string>
    <string name="etPassHint">IngreseContraseña</string>

    <string name="btnIngresar">Ingresar</string>


</resources>